<resources>
    <string name="app_name" translatable="false">PokémonGooseGame</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="FRONT_SPRITE_DESCRIPTION">Front sprite of pokemon</string>
    <string name="TYPE_ICON_DESCRIPTION">Icon of pokemon type</string>
    <string name="TV_PLAYER_NAME_LABEL_TEXT">Hello! My name\'s:</string>
    <string name="ET_PLAYER_NAME_HINT">Player name here</string>
    <string name="TV_CHOOSE_POKEMON_LABEL_TEXT">And I choose you:</string>
    <string name="ET_POKEMON_NAME_HINT">Pokemon name here</string>
    <string name="BUTTON_DONE">add player</string>
    <string name="PLAYER_DEFAULT_NAME">Player</string>
    <string name="B_CHANGE_BOARD_TEXT">Choose</string>
    <string name="TV_BOARD_TYPE_TEXT">Board type:</string>
    <string name="ET_BOARD_TYPE_HINT">Board type here</string>
    <string name="TV_BOARD_NAME_TEXT">Board name:</string>
    <string name="ET_BOARD_NAME_HINT">Board name here</string>
    <string name="ADD_PLAYER_DIALOG_TITLE">%s added to the game</string>
    <string name="ADD_PLAYER_DIALOG_MSG">Add another player to the game?</string>
    <string name="YES">yes</string>
    <string name="NO">no</string>
    <string name="BUTTON_POSITIVE_SELECT_BOARD">Ok</string>
    <string name="TOAST_SELECT_BOARD">Coming soon...</string>
    <string name="BUTTON_NEGATIVE_SELECT_BOARD">Back</string>
    <string name="DIALOG_SELECT_BOARD_TITLE">Board configuration</string>
    <string name="CREATE_NEW_BOARD_SETTINGS">Create new board settings</string>
    <string name="ALERT_NO_BOARD_SELECTED_TITLE">No board configuration selected!</string>
    <string name="ALERT_NO_BOARD_SELECTED_MSG">Choose a board configuration before continuing</string>
    <string name="ALERT_NO_POKEMON_SELECTED_TITLE">No pokemon selected!</string>
    <string name="ALERT_NO_POKEMON_SELECTED_MSG">You have to select a pokemon first</string>
    <string name="BUTTON_START_GAME_TEXT">Start game</string>
    <string name="ALERT_NO_PLAYER_ADDED_MSG">Please add at least one player to start the game</string>
    <string name="ALERT_NO_PLAYER_ADDED_TITLE">No player added!</string>
    <string name="TOAST_WITH_ICON_HINT">Toast message here</string>
    <string name="dice_res">Dice result is:</string>
    <string name="actual_score">Your Actual Score is:</string>
    <string name="has_to_move_for">has to move for</string>
    <string name="cells">cells</string>
    <string name="TOAST_THROW_DICE">%s roll the dice!</string>
    <string name="DIALOG_MESSAGE_SKIP_TURN">Ops, you have to skip the turn...</string>
    <string name="ALERT_POKEMON_FAINTED_TITLE">%s, your journey ends here</string>
    <string name="ALERT_POKEMON_FAINTED_MSG">Your %s just fainted. You hurry to the nearest poke center, hoping in better luck next time.</string>
    <string name="default_description_dialog_text">Default description</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="win_title">You did it buddy!!</string>
    <string name="win_description_dialog">All the gold in the plate is yours to take! You surely have what it takes to be a winner, but will it be enough to make you the very best?</string>
    <string name="play_button_description">Play button</string>
    <string name="main_bg_description">Main BG</string>
    <string name="sound_button_description">sound button</string>
    <string name="config_button_description">Config button</string>
    <string name="pokecoins_icon">PokeCoins icon</string>
    <string name="up_arrow_description">up arrow</string>
    <string name="down_arrow_description">Down Arrow, move the board on the below page</string>
    <string name="dice_image_description">Dice image</string>
    <string name="config_image_description">Config image</string>
    <string name="TV_TITLE_ACTIVITY_LEADER_BOARD">Scoreboard</string>
    <string name="CONTENT_DESCRIPTION_IV_POSITION_CARD">image for the next score points</string>
    <string name="isSoundOn_flag" translatable="false">isSoundOn</string>
    <string name="game_flag" translatable="false">game</string>
    <string name="little_hidden_treasure_description_dialog">You spot some coins shining in the grass. Coins + 50</string>
    <string name="little_hidden_treasure_title_dialog">Little hidden treasure</string>
    <string name="no_place_like_home_yellow_effect">"If your pokemon is of the same type of this cell, it heals 30% "</string>
    <string name="no_place_like_home_yellow_effect_title">No Place Like Home</string>
    <string name="dialog_quit_title">Quit?</string>
    <string name="dialog_quit_message">You are sure you want to quit?</string>
    <string name="dialog_quit_pos_button_text">Yes, quit!</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="its_a_trap_yellow_effect_title">It\'s a trap!</string>
    <string name="its_a_trap_yellow_effect_description">The team rocket ambushes you! You manage to escape after an hard fight. -20% health</string>
    <string name="the_tribute_of_the_pious_yellow_effect_title">The tribute of the pious</string>
    <string name="the_tribute_of_the_pious_yellow_effect_description">You found a legendary pokemon shrine in the woods. You must pay 10 coins to the plate, else your pokemon shall suffer it\'s godly wrath, losing 10% health</string>
    <string name="another_day_another_victory_description_dialog">An opponent dares to challenge you, but it\'s nothing more than an easy fight. You win 30 coins</string>
    <string name="another_day_another_victory_title_dialog">Another day, another victory</string>
    <string name="ITS_ON_FIRE_YO_TITLE">****\'s on fire, yo!</string>
    <string name="ITS_ON_FIRE_YO_DESC">A rapper Jigglypuff appears! Its rhymes are too lit to be ignored. You lose one turn between one beat and another</string>
    <string name="oh_no_my_pocket_yellow_effect_title">Oh no! My wallet!</string>
    <string name="that_berry_looks_tasty_dialog_title">That berry looks tasty!</string>
    <string name="that_berry_looks_tasty_dialog_description">You have found a berry! If you want your pokemon to eat it, roll your dice first</string>
    <string name="that_berry_looks_tasty_dialog_positive_button">Roll</string>
    <string name="that_berry_looks_tasty_roll_dialog_title">Chomp!</string>
    <string name="that_berry_looks_tasty_roll_dialog_message_case_1">The berry intoxicates your pokemon. -5% health</string>
    <string name="that_berry_looks_tasty_roll_dialog_message_case_6">There is a coin in the berry! +5%health, +10 coins</string>
    <string name="that_berry_looks_tasty_roll_dialog_message_case_else">The berry was really tasty indeed. +5% health</string>
    <string name="that_berry_looks_tasty_dialog_negative_button">Leave it</string>
    <string name="that_little_brat_yellow_effect_title">That little brat!</string>
    <string name="that_little_brat_yellow_effect_description">You have been robbed by Burglar psyduck! You lose half of your coins to the plate</string>
    <string name="when_the_bed_traps_you_yellow_effect_title">When the bed traps you</string>
    <string name="when_the_bed_traps_you_yellow_effect_description">You feel too tired to even get out of bed. Your pokemon heals 30% health, but you lose 1 turn</string>
    <string name="caught_you_without_mask_yellow_effect_title">Caught you without a mask!</string>
    <string name="caught_you_without_mask_yellow_effect_description">Well well well, what do we have here. This will cost you 25 coins, sir. Now go 6 cells back to your house and stay in quarantine for 1 turn</string>
    <string name="a_challenger_approaches_yellow_effect_title">A challenger approaches</string>
    <string name="a_challenger_approaches_yellow_effect_description">An opponent spots you and wants to fight. Roll a dice to see who wins</string>
    <string name="a_challenger_approaches_yellow_effect_win_case">YOU WIN! Here 20 coins for you</string>
    <string name="a_challenger_approaches_yellow_effect_lost_case">Oh no... you lost, Better luck next time</string>
    <string name="a_challenger_approaches_yellow_effect_run_win_case">You can\'t just run away, it would be unsporting! You managed to win anyway, maybe you should put more trust in yourself. + 20 coins</string>
    <string name="a_challenger_approaches_yellow_effect_run_lost_case">You can\'t just run away, it would be unsporting! This escape attempt enrages your opponent, who fights with encreased determination. You learn in the hard way that only when we run away from problems they become really unsolvable. You handle 20 coins to your opponent, thanking them for the life lesson.</string>
    <string name="a_challenger_approaches_yellow_effect_fight_button_name">LET\'S FIGHT!</string>
    <string name="a_challenger_approaches_yellow_effect_run_button_name">RUN</string>
    <string name="oh_no_my_pocket_yellow_effect_description">"Where is your head? You can't find your wallet. You go back 6 cells to search for it, only to find it empty. - 20 coins "</string>
    <string name="music_service_player_error">Music player failed</string>
    <string name="work_in_progress_dialog_title">Working in progress...</string>
    <string name="work_in_progress_dialog_description">We are working for you, please be patient</string>
    <string name="MENU_MAIN_HOME_TITLE" translatable="false">Home</string>
    <string name="MENU_MAIN_INFO_TITLE">Info</string>
    <string name="MENU_MAIN_STATS_TITLE">Stats</string>
    <string name="MENU_MAIN_ABOUT_US_TITLE">About Us</string>
    <string name="MENU_MAIN_LOGIN_TITLE">Login</string>
    <string name="MAIN_MENU_PROFILE_TITLE">Profile</string>
    <string name="MAIN_MENU_LOGOUT_TITLE">LogOut</string>
    <string name="MAIN_MENU_COMUNICATE_TITLE">Comunicate</string>
    <string name="MAIN_MENU_SHARE_TITLE">Share</string>
    <string name="MAIN_MENU_FAVOURITES_TITLE">Favourites</string>
    <string name="MAIN_MENU_EXPLORE_TITLE">Explore</string>
    <string name="MAIN_MENU_USER_TITLE">User</string>
    <string name="MAIN_MENU_HEADER_TITLE" translatable="false">@string/app_name</string>
    <string name="COPYRIGHT">Copyright %d by Wall-E Team</string>
    <string name="ABOUT_US_DESC">It\'s not a game, Its the game!</string>
    <string name="VERSION">Version 0.1 Pre Alfa</string>
    <string name="ABOUT_US_TEAM_HEADER">The Team:</string>
    <string name="TV_ROLL">Tap to Roll!</string>
    <string name="BOARD_CREATION_ALGORITHMS">Procedurally generated</string>
    <string name="hand_that_indicate_the_dice">hand That indicate the dice</string>
    <string name="text_that_suggest_the_roll_of_the_dice">Text that suggest the roll of the dice</string>
    <string name="choosed_pokemon_displayed_here">Choosed pokemon displayed here</string>
</resources>