<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/MAIN_MENU_EXPLORE_TITLE">
    <menu>
        <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/MENU_MAIN_HOME_TITLE" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info_icon"
            android:title="@string/MENU_MAIN_INFO_TITLE" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/stats_icon"
            android:title="@string/MENU_MAIN_STATS_TITLE" />
        <item
            android:id="@+id/nav_AboutUs"
            android:icon="@drawable/aboutus_icon"
            android:title="@string/MENU_MAIN_ABOUT_US_TITLE" />
    </group>
    </menu>
    </item>

    <item android:title="@string/MAIN_MENU_USER_TITLE">
    <menu>
        <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login_icon"
            android:title="@string/MENU_MAIN_LOGIN_TITLE" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/MAIN_MENU_PROFILE_TITLE" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout__icon"
            android:title="@string/MAIN_MENU_LOGOUT_TITLE" />


    </group>
    </menu>
    </item>
    <item android:title="@string/MAIN_MENU_COMUNICATE_TITLE">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/MAIN_MENU_SHARE_TITLE" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_icon"
                android:title="@string/MAIN_MENU_FAVOURITES_TITLE" />
        </menu>

    </item>

</menu>