<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialog_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/minimal_margin"
        android:scrollbars="vertical"
        android:text="@string/dialog_title"
        android:textColor="@color/white"
        android:textSize="@dimen/players_name_dimension" />

    
    <ImageView
        android:id="@+id/dialog_image"

        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/minimal_margin"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/general_effect_img" />


    <TextView
        android:id="@+id/dialog_description_text"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/minimal_margin"
        android:scrollbars="vertical"
        android:text="@string/default_description_dialog_text"
        android:textColor="@color/white" />

</LinearLayout>
